Fix two issues found by @andrewlock - posts page broken in private Safari and SASS build error.
Changes
- Add proper error handling and checking for store.js.
- Fix @extend statement to @include to resolve a SASS build error for gulp-sass ^v2.3.1

--- a/assets/scss/modules/_mixins.scss
+++ b/assets/scss/modules/_mixins.scss
@@ -44,7 +44,7 @@
     &:hover {
         border: 1px solid $primary-color;
     }
-    @extend btn-cover;
+    @include btn-cover;
 }
 
 @mixin placeholder {
